Tue Jun  8 15:15:18 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/net/smtp.rb (Net::SMTP#rcptto_list): fixed typo.
	  [ruby-core:29809]

Tue Jun  8 15:15:18 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/net/smtp.rb (Net::SMTP#rcptto_list): continue when at least
	  one RCPT is accepted.  based on a patch from Kero van Gelder at
	  [ruby-core:26190].

Tue Jun  8 15:14:11 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* LEGAL: separated the section for parse.c.  contributed by Paul
	  Betteridge in [ruby-core:29472].

Tue Jun  8 14:00:33 2010  Keiju Ishitsuka  <keiju@ruby-lang.org>

	* ext/rational/lib/rational.rb: fix [Bug #1397].

Tue Jun  8 13:40:04 2010  Tadayoshi Funaba  <tadf@dotrb.org>

	* lib/date.rb (Date#>>): fixed.  [ruby-core:28011]

Tue Jun  8 12:37:56 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* io.c, eval.c, process.c: add linux to r26371's condition.
	  patched by Motohiro KOSAKI [ruby-core:28151]

Tue Jun  8 12:37:56 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* eval.c (thread_timer, rb_thread_stop_timer): check the timing of
	  stopping timer.  patch from KOSAKI Motohiro <kosaki.motohiro _AT_
	  jp.fujitsu.com> via IRC.

	* eval.c (rb_thread_start_timer): NetBSD5 seems to be hung when calling
	  pthread_create() from pthread_atfork()'s parent handler.

	* io.c (pipe_open): workaround for NetBSD5. stop timer thread before
	  fork(), and restart it after fork() on parent, and on child if
	  needed.

	* process.c (rb_f_fork, rb_f_system): ditto.

	  these changes are tested by naruse.  fixed [ruby-dev:40074]

Mon Jun  7 19:23:04 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/nkf/nkf-utf8/nkf.c (numchar_getc): get rid of buffer
	  overflow.  [ruby-dev:40606]

Mon Jun  7 18:57:02 2010  NAKAMURA, Hiroshi  <nahi@ruby-lang.org>

	* ext/openssl/ossl_ssl_session.c
	  (ossl_ssl_session_{get,set}_time{,out}): fixed a bug introduced by
	  backporting. (see [ruby-dev:40573])  use long in according to